update weblogic start script